@@ -126,6 +126,14 @@ cache. \\
 \end{tabular}
 
 
+\section{Running}
+
+\subsection{Signals}
+
+On \texttt{SIGHUP}, the log file is reopened and all caches are
+flushed.
+
+
 \section{Resources}
 
 \emph{beng-proxy} delivers resources to its HTTP clients.  It obtains
