@@ -6,6 +6,7 @@ cm4all-beng-proxy (0.6.7) unstable; urgency=low
     - http_cache_size
     - filter_cache_size
     - translate_cache_size
+  * flush caches on SIGHUP
 
  --
 
